# CrossCraft-Core

./: .gitmodules  CMakeLists.txt  README.md
include/CrossCraft/: common.h  core.h  entity.h  event.h  indev.h  level.h  log.h  mob.h  player.h  world.h  worldgen.h
src/: core.c  entity.c  event.cpp  indev.c  level.c  log.c  mob.c  player.c  world.c  world.cpp  worldgen.c
